# menteviva-backend

./: .gitignore  activities.py  alert.py  auth.py  blanca.py  chatbot.py  cv.py  instagram.py  main.py  memory_service.py  news.py  pyproject.toml  quote.py  rate_limit.py  reminder_scheduler.py  reminders.py  requirements.txt  social_google.py  spanish_newspapers.py  spotify.py  startup.sh  token_crypto.py  tool_registry.py  user_context.py  voice.py  weather.py
.claude/: settings.local.json
.github/workflows/: master_backendcv.yml  master_menteviva.yml
tests/: test_activities_flow.py  test_memory_service.py  test_realtime_tools.py  test_weather_location.py
