[project]
name = "menteviva-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "croniter>=6.2.2",
    "fastapi[standard]>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "twilio>=9.10.5",
    "typing-extensions>=4.15.0",
    "tzdata>=2026.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
